--- a/index.html
+++ b/index.html
@@ -86,6 +86,6 @@
       </div>
     </div>
     <script src="src/index.js"></script>
-    <p id="link"><a href="https://github.com/nadezzda/my-project" id="repository">Open-source code</a>by Nadiia Malichenko</p>
+    <p id="link"><a href="https://github.com/nadezzda/my-project" id="repository">Open-source code</a>, by Nadiia Malichenko</p>
   </body>
 </html>
