--- a/index.html
+++ b/index.html
@@ -25,9 +25,12 @@
   <body>
     <div class="search">
       <form id="head"> 
-        <input type="text" placeholder="Enter the city..." id="searchCity" />
+        <input type="search" placeholder="Enter the city..." class="form-control col-9" id="searchCity" />
+       <div class="col-3">
         <button id="search">Search</button>
-        <button id="cur">Current</button>
+        </div>
+        <div class="col-3"> <button id="cur">Current</button>
+     </div> 
       </form>
     </div>
     <div class="current">
