--- a/index.html
+++ b/index.html
@@ -35,9 +35,11 @@
     </div>
     <div class="current">
       <div class="general">
+        <div id="temper">
         <h1 id="cityname">Braunschweig</h1>
         <h1 class="temperature">23</h1>
-        <a href="#" id="celcium">°C|</a><a href="#" id="farenheit">°F</a>
+       <a href="#" class="active" id="celcium">°C</a> | <a href="#" id="farenheit">°F</a>
+        </div>
         <h2 class="date">Saturday 19:01</h2>
       </div>
       <div class="container">
