--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         </div>
       </div>
     </div>
-    <div class="forecast">
+    <!-- <div class="forecast">
       <div class="row">
         <div class="col days">
           Tu
@@ -89,7 +89,7 @@
           <i class="fa-solid fa-cloud-sun"></i>
         </div>
       </div>
-    </div>
+    </div> -->
     <script src="src/index.js"></script>
     <p id="link"><a href="https://github.com/nadezzda/my-project" id="repository">Open-source code</a>, by Nadiia Malichenko</p>
   </body>
