Add forecast html

--- a/index.html
+++ b/index.html
@@ -55,41 +55,50 @@
         </div>
       </div>
     </div>
-    <!-- <div class="forecast">
+    <div class="forecast">
       <div class="row">
         <div class="col days">
-          Tu
-          <br />
-          21°C
-          <br />
-          <i class="fa-solid fa-cloud-sun"></i>
+          <div class="forecast-date">Tu</div>
+                  <img src="http://openweathermap.org/img/wn/50d@2x.png" width="42">
+                  <div class="forecast-temp">
+          <span class="forecast-temp-max">21°</span>
+          <span class="forecast-temp-min">21°</span>
+         </div>
         </div>
         <div class="col days">
-          We<br />
-          21°C
-          <br />
-          <i class="fa-solid fa-cloud-sun"></i>
+          <div class="forecast-date">Tu</div>
+                  <img src="http://openweathermap.org/img/wn/50d@2x.png" width="42">
+                  <div class="forecast-temp">
+          <span class="forecast-temp-max">21°</span>
+          <span class="forecast-temp-min">21°</span>
+         </div>
         </div>
         <div class="col days">
-          Th<br />
-          22°C
-          <br />
-          <i class="fa-solid fa-cloud-sun"></i>
+          <div class="forecast-date">Tu</div>
+                  <img src="http://openweathermap.org/img/wn/50d@2x.png" width="42">
+                  <div class="forecast-temp">
+          <span class="forecast-temp-max">21°</span>
+          <span class="forecast-temp-min">21°</span>
+         </div>
         </div>
         <div class="col days">
-          Fr<br />
-          21°C
-          <br />
-          <i class="fa-solid fa-cloud-sun"></i>
+          <div class="forecast-date">Tu</div>
+                  <img src="http://openweathermap.org/img/wn/50d@2x.png" width="42">
+                  <div class="forecast-temp">
+          <span class="forecast-temp-max">21°</span>
+          <span class="forecast-temp-min">21°</span>
+         </div>
         </div>
         <div class="col days">
-          Sa<br />
-          24°C
-          <br />
-          <i class="fa-solid fa-cloud-sun"></i>
+          <div class="forecast-date">Tu</div>
+                  <img src="http://openweathermap.org/img/wn/50d@2x.png" width="42">
+                  <div class="forecast-temp">
+          <span class="forecast-temp-max">21°</span>
+          <span class="forecast-temp-min">21°</span>
+         </div>
         </div>
       </div>
-    </div> -->
+    </div>
     <script src="src/index.js"></script>
     <p id="link"><a href="https://github.com/nadezzda/my-project" id="repository">Open-source code</a>, by Nadiia Malichenko</p>
   </body>
