Add forecast js

--- a/index.html
+++ b/index.html
@@ -55,50 +55,7 @@
         </div>
       </div>
     </div>
-    <div class="forecast">
-      <div class="row">
-        <div class="col days">
-          <div class="forecast-date">Tu</div>
-                  <img src="http://openweathermap.org/img/wn/50d@2x.png" width="42">
-                  <div class="forecast-temp">
-          <span class="forecast-temp-max">21°</span>
-          <span class="forecast-temp-min">21°</span>
-         </div>
-        </div>
-        <div class="col days">
-          <div class="forecast-date">Tu</div>
-                  <img src="http://openweathermap.org/img/wn/50d@2x.png" width="42">
-                  <div class="forecast-temp">
-          <span class="forecast-temp-max">21°</span>
-          <span class="forecast-temp-min">21°</span>
-         </div>
-        </div>
-        <div class="col days">
-          <div class="forecast-date">Tu</div>
-                  <img src="http://openweathermap.org/img/wn/50d@2x.png" width="42">
-                  <div class="forecast-temp">
-          <span class="forecast-temp-max">21°</span>
-          <span class="forecast-temp-min">21°</span>
-         </div>
-        </div>
-        <div class="col days">
-          <div class="forecast-date">Tu</div>
-                  <img src="http://openweathermap.org/img/wn/50d@2x.png" width="42">
-                  <div class="forecast-temp">
-          <span class="forecast-temp-max">21°</span>
-          <span class="forecast-temp-min">21°</span>
-         </div>
-        </div>
-        <div class="col days">
-          <div class="forecast-date">Tu</div>
-                  <img src="http://openweathermap.org/img/wn/50d@2x.png" width="42">
-                  <div class="forecast-temp">
-          <span class="forecast-temp-max">21°</span>
-          <span class="forecast-temp-min">21°</span>
-         </div>
-        </div>
-      </div>
-    </div>
+    <div class="forecast" id="forecast"></div>
     <script src="src/index.js"></script>
     <p id="link"><a href="https://github.com/nadezzda/my-project" id="repository">Open-source code</a>, by Nadiia Malichenko</p>
   </body>
