Remove farenheit convert, improve css

--- a/index.html
+++ b/index.html
@@ -10,13 +10,11 @@
       integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
       crossorigin="anonymous"
     />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Cousine&family=Gloria+Hallelujah&family=Roboto+Slab:wght@300&display=swap"
-      rel="stylesheet"
-    />
-    <script
+    
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Goldman&display=swap" rel="stylesheet"> 
+<script
       src="https://kit.fontawesome.com/82eadae9e2.js"
       crossorigin="anonymous"
     ></script>
@@ -37,9 +35,9 @@
       <div class="general">
         <div id="temper">
         <h1 id="cityname">Braunschweig</h1>
-        <h1 class="temperature">23</h1>
-       <a href="#" class="active" id="celcium">°C</a> | <a href="#" id="farenheit">°F</a>
-        </div>
+        <h1 class="temperature">23</h1>°C
+ <!-- <a href="#" class="active" id="celcium">°C</a> | <a href="#" id="farenheit">°F</a>  -->
+          </div>
         <h2 class="date">Saturday 19:01</h2>
       </div>
       <div class="container">
