--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Weather app</title>
+    <title>Weather-forecast-app</title>
     <meta charset="UTF-8" />
     <link href="styles/styles.css" rel="stylesheet"/>
     <link
@@ -59,6 +59,6 @@
 
     <div class="forecast" id="forecast"></div>
     <script src="src/index.js"></script>
-    <p id="link"><a href="https://github.com/nadezzda/my-project" id="repository">Open-source code</a>, by Nadiia Malichenko</p>
+    <p id="link"><a href="https://github.com/nadezzda/Weather-forecast-app" id="repository">Open-source code</a>, by Nadiia Malichenko</p>
   </body>
 </html>
