--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
        <div class="col-3">
         <button id="search">Search</button>
         </div>
-        <div class="col-3"> <button id="cur">Current</button>
+       <!-- <div class="col-3"> <button id="cur">Current</button>  -->
      </div> 
       </form>
     </div>
